envs/dev/platform/k8s/policies/psa/psa-restricted-audit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-restricted-audit
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: psa-restricted
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - kube-system
            - kyverno
            - kube-public
            - kube-node-lease
      validate:
        podSecurity:
          level: "restricted"
          version: "v1.29"
