envs/dev/platform/k8s/policies/psa/psa-restricted-enforce.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-restricted-demo
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: enforce-psa-restricted
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - demo-app
      validate:
        podSecurity:
          level: "restricted"
          version: "v1.29"
